switch to cpp from c.
git-svn-id: http://python-geohash.googlecode.com/svn/trunk@139 ba37ce5e-9c32-11de-9070-0b7171dc4b6e

--- a/src/Makefile
+++ b/src/Makefile
@@ -1,13 +1,12 @@
-CC	= gcc
-CFLAGS	= -O3
-LDFLAGS	=
+CXX	= g++
+CXXFLAGS	= -O3
 TARGET	= sample
 OBJS	= geohash_sample.o geohash.o
 
 all:	$(TARGET)
 $(TARGET):	$(OBJS)
-	$(CC) $(LDFLAGS) -o $@ $(OBJS)
+	$(CXX) -o $@ $(OBJS)
 clean:
 	-rm -f $(TARGET) $(OBJS)
-.c.o:
-	$(CC) $(CFLAGS) -c $<
+.cpp.o:
+	$(CXX) $(CXXFLAGS) -c $<
