switch back to c from cpp for sample code.
git-svn-id: http://python-geohash.googlecode.com/svn/trunk@141 ba37ce5e-9c32-11de-9070-0b7171dc4b6e

--- a/src/Makefile
+++ b/src/Makefile
@@ -1,5 +1,7 @@
+CC	= gcc
 CXX	= g++
-CXXFLAGS	= -O3
+CFLAGS	= -O3
+CXXFLAGS	=
 TARGET	= sample
 OBJS	= geohash_sample.o geohash.o
 
@@ -8,5 +10,7 @@ $(TARGET):	$(OBJS)
 	$(CXX) -o $@ $(OBJS)
 clean:
 	-rm -f $(TARGET) $(OBJS)
+.c.o:
+	$(CC) $(CFLAGS) -c $<
 .cpp.o:
 	$(CXX) $(CXXFLAGS) -c $<
